animator fixed and running within function (solution: save plot as variable)

--- a/python/notebooks/animate.ipynb
+++ b/python/notebooks/animate.ipynb
@@ -11,7 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -58,8 +69,6 @@
     "        rows=data[idx].shape[0]\n",
     "        \n",
     "        smoothed[idx]=np.zeros((rows*10,3))\n",
-    "        \n",
-    "        \n",
     "        smoothed[idx]=PCA.reduc(x, 3)\n",
     "        smoothed[idx]= interp(smoothed[idx])\n",
     "        \n",
@@ -81,7 +90,8 @@
     "    ax1 = fig1.add_subplot(111, projection='3d')\n",
     "\n",
     "\n",
-    "    animation.FuncAnimation(fig1, animate2, interval=8, repeat=True)#frames=range(1, len(test_interp)), \n",
+    "    anim=animation.FuncAnimation(fig1, animate2, interval=8, repeat=True)#frames=range(1, len(test_interp)), \n",
+    "\n",
     "\n",
     "    plt.show()\n",
     "\n"
@@ -98,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
@@ -109,12 +119,13 @@
     "test_data2=data['weights'][0][2]\n",
     "test_data3=data['weights'][0][3]\n",
     "\n",
-    "sample=np.array([test_data, test_data2, test_data3])\n"
+    "sample=np.array([test_data, test_data2, test_data3])\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -126,31 +137,39 @@
       "(3, 300, 100)\n",
       "(300, 100)\n",
       "3\n",
-      "[array([[-0.10050128, -1.04455259, -0.85417606],\n",
-      "       [-0.0313257 , -0.99388629, -0.75764993],\n",
-      "       [ 0.03641036, -0.94479789, -0.6584763 ],\n",
+      "[array([[ 0.10050115, -1.04455161,  0.85417628],\n",
+      "       [ 0.0313256 , -0.99388536,  0.75765008],\n",
+      "       [-0.03641043, -0.94479701,  0.6584764 ],\n",
       "       ..., \n",
-      "       [-0.46481833, -1.86661333, -0.1418612 ],\n",
-      "       [-0.52017295, -1.80499328, -0.23800472],\n",
-      "       [-0.56840782, -1.74231591, -0.33748146]]), array([[-1.52101267,  1.16180122, -0.1475715 ],\n",
-      "       [-1.5197359 ,  0.97660381, -0.08756245],\n",
-      "       [-1.51598869,  0.79750629, -0.03039617],\n",
+      "       [ 0.4648183 , -1.86661315,  0.14186334],\n",
+      "       [ 0.52017292, -1.80499301,  0.23800672],\n",
+      "       [ 0.56840778, -1.74231555,  0.33748331]]), array([[-1.52102113,  1.16178977,  0.14757149],\n",
+      "       [-1.51974422,  0.97659203,  0.08756235],\n",
+      "       [-1.5159966 ,  0.79749417,  0.03039599],\n",
       "       ..., \n",
-      "       [ 0.53832364,  2.8415595 ,  0.30889583],\n",
-      "       [ 0.54267998,  2.74696358,  0.27717045],\n",
-      "       [ 0.54827363,  2.64803903,  0.24147875]]), array([[-0.33853163,  1.53092013, -1.0201791 ],\n",
-      "       [-0.26826474,  1.49379714, -0.84516154],\n",
-      "       [-0.20543733,  1.45662243, -0.67578178],\n",
+      "       [ 0.53830224,  2.8415647 , -0.30889719],\n",
+      "       [ 0.54265944,  2.74696888, -0.27717175],\n",
+      "       [ 0.54825418,  2.64804443, -0.24147998]]), array([[ 0.33853072,  1.53091919, -1.02017844],\n",
+      "       [ 0.26826388,  1.49379616, -0.84516075],\n",
+      "       [ 0.20543651,  1.45662142, -0.67578088],\n",
       "       ..., \n",
-      "       [-0.37642029,  1.50196574, -0.5083209 ],\n",
-      "       [-0.4004052 ,  1.49345617, -0.47035729],\n",
-      "       [-0.42951514,  1.48725485, -0.42664992]])]\n"
+      "       [ 0.37641968,  1.50196503, -0.50832079],\n",
+      "       [ 0.40040457,  1.49345544, -0.47035713],\n",
+      "       [ 0.42951448,  1.48725409, -0.42664971]])]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/contextlab/Library/Enthought/Canopy_64bit/User/lib/python2.7/site-packages/matplotlib/cbook.py:137: MatplotlibDeprecationWarning: The set_color_cycle attribute was deprecated in version 1.5. Use set_prop_cycle instead.\n",
+      "  warnings.warn(message, mplDeprecation, stacklevel=1)\n"
      ]
     }
    ],
    "source": [
     "animator(sample)\n",
-    "plt.show()"
+    "#plt.show()"
    ]
   },
   {
