trailing dots and visual clean-up

--- a/python/notebooks/animate.ipynb
+++ b/python/notebooks/animate.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 89,
    "metadata": {
     "collapsed": false
    },
@@ -79,11 +79,32 @@
     "        ax1.clear()\n",
     "        #ax2.clear()\n",
     "\n",
-    "        ax1.set_color_cycle(['red', 'green','blue','black'])\n",
+    "        #ax1.set_color_cycle(['red', 'red','grey','purple','purple','grey','orange','orange','grey'])\n",
     "        #ax2.set_color_cycle(['black'])\n",
     "\n",
     "        for x in smoothed:\n",
-    "            ax1.plot(x[0:i, 0], x[0:i, 1], x[0:i, 2])\n",
+    "            if i<=15:\n",
+    "                ax1.set_color_cycle(['red','red','red'])\n",
+    "                ax1.plot(x[0:i, 0], x[0:i, 1], x[0:i, 2])\n",
+    "                \n",
+    "            if i>15 and i<18:\n",
+    "                ax1.set_color_cycle(['red','red','red'])\n",
+    "                ax1.plot(x[i-15:i, 0], x[i-15:i, 1], x[i-15:i, 2])\n",
+    "                \n",
+    "        \n",
+    "            if i>=18 and i<58:\n",
+    "                ax1.set_color_cycle(['red', 'red','grey','purple','purple','grey','orange','orange','grey'])\n",
+    "                ax1.plot(x[i-15:i, 0], x[i-15:i, 1], x[i-15:i, 2])\n",
+    "                ax1.plot(x[i-18:i-15,0],x[i-18:i-15,1],x[i-18:i-15,2], \":\")\n",
+    "                ax1.plot(x[0:i-18,0],x[0:i-18,1],x[0:i-18,2], \":\")\n",
+    "                \n",
+    "            if i>=58:\n",
+    "                ax1.set_color_cycle(['red', 'red','grey','purple','purple','grey','orange','orange','grey'])\n",
+    "                ax1.plot(x[i-15:i, 0], x[i-15:i, 1], x[i-15:i, 2])\n",
+    "                ax1.plot(x[i-18:i-15,0],x[i-18:i-15,1],x[i-18:i-15,2], \":\")\n",
+    "                ax1.plot(x[i-58:i-18,0],x[i-58:i-18,1],x[i-58:i-18,2], \":\")\n",
+    "\n",
+    "            #ax1.plot(x[0:i, 0], x[0:i, 1], x[0:i, 2])\n",
     "            #ax1.plot(test_interp2[0:i, 0], test_interp2[0:i, 1], test_interp2[0:i, 2])\n",
     "\n",
     "    fig1 = plt.figure()\n",
@@ -108,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 90,
    "metadata": {
     "collapsed": true
    },
@@ -125,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 91,
    "metadata": {
     "collapsed": false
    },
@@ -156,14 +177,6 @@
       "       [ 0.37641968,  1.50196503, -0.50832079],\n",
       "       [ 0.40040457,  1.49345544, -0.47035713],\n",
       "       [ 0.42951448,  1.48725409, -0.42664971]])]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/contextlab/Library/Enthought/Canopy_64bit/User/lib/python2.7/site-packages/matplotlib/cbook.py:137: MatplotlibDeprecationWarning: The set_color_cycle attribute was deprecated in version 1.5. Use set_prop_cycle instead.\n",
-      "  warnings.warn(message, mplDeprecation, stacklevel=1)\n"
      ]
     }
    ],
