rotating traj_plot :)

--- a/python/notebooks/animate.ipynb
+++ b/python/notebooks/animate.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 128,
    "metadata": {
     "collapsed": false
    },
@@ -85,20 +85,28 @@
     "        for x in smoothed:\n",
     "            if i<=15:\n",
     "                ax1.set_color_cycle(['red','red','red'])\n",
+    "                ax1.view_init(elev=10., azim=i)\n",
     "                ax1.plot(x[0:i, 0], x[0:i, 1], x[0:i, 2])\n",
     "                \n",
     "            if i>15 and i<18:\n",
     "                ax1.set_color_cycle(['red','red','red'])\n",
+    "                ax1.view_init(elev=10., azim=i)\n",
     "                ax1.plot(x[i-15:i, 0], x[i-15:i, 1], x[i-15:i, 2])\n",
     "                \n",
     "        \n",
     "            if i>=18 and i<58:\n",
     "                ax1.set_color_cycle(['red', 'red','grey','purple','purple','grey','orange','orange','grey'])\n",
+    "                ax1.view_init(elev=10., azim=i)\n",
     "                ax1.plot(x[i-15:i, 0], x[i-15:i, 1], x[i-15:i, 2])\n",
     "                ax1.plot(x[i-18:i-15,0],x[i-18:i-15,1],x[i-18:i-15,2], \":\")\n",
     "                ax1.plot(x[0:i-18,0],x[0:i-18,1],x[0:i-18,2], \":\")\n",
     "                \n",
     "            if i>=58:\n",
+    "                if i<360:\n",
+    "                    ax1.view_init(elev=10., azim=i)\n",
+    "                else:\n",
+    "                    Az=i-(int(i/360)*360)\n",
+    "                    ax1.view_init(elev=10., azim=Az)\n",
     "                ax1.set_color_cycle(['red', 'red','grey','purple','purple','grey','orange','orange','grey'])\n",
     "                ax1.plot(x[i-15:i, 0], x[i-15:i, 1], x[i-15:i, 2])\n",
     "                ax1.plot(x[i-18:i-15,0],x[i-18:i-15,1],x[i-18:i-15,2], \":\")\n",
@@ -109,11 +117,14 @@
     "\n",
     "    fig1 = plt.figure()\n",
     "    ax1 = fig1.add_subplot(111, projection='3d')\n",
+    "    #ax1.auto_scale_xyz(100,100,100)\n",
     "\n",
-    "\n",
+    "    #for ii in xrange(0,360,1):\n",
+    "        #ax.view_init(elev=10., azim=ii)\n",
+    "        #savefig(\"movie%d.png\" % ii)\n",
+    "    \n",
     "    anim=animation.FuncAnimation(fig1, animate2, interval=8, repeat=True)#frames=range(1, len(test_interp)), \n",
-    "\n",
-    "\n",
+    "    \n",
     "    plt.show()\n",
     "\n"
    ]
@@ -129,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 129,
    "metadata": {
     "collapsed": true
    },
@@ -146,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
