--- a/python/notebooks/animate.ipynb
+++ b/python/notebooks/animate.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
@@ -30,7 +30,7 @@
    "source": [
     "import sys\n",
     "sys.path.append('../')\n",
-    "import scipy.io as sio\n",
+    "#import scipy.io as sio\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt \n",
     "import matplotlib.animation as animation\n",
@@ -44,37 +44,39 @@
     "\n",
     "def animator(data):\n",
     "    \n",
+    "    def is_list(x):\n",
+    "        if type(x[0][0])==np.ndarray:\n",
+    "            return True\n",
+    "        elif type(x[0][0])==np.int64 or type(x[0][0])==int:\n",
+    "            return False\n",
+    "        \n",
     "    def interp(z):\n",
     "        x=np.arange(0, len(z), 1)\n",
     "        xx=np.arange(0, len(z)-1, .1)\n",
     "        q=pchip(x,z)\n",
     "        return q(xx)\n",
-    "\n",
     "    \n",
-    "    #ADD: check to make sure all matrices in data are the same size and/or do resize\n",
-    "    \n",
-    "\n",
-    "    #test_data=np.array([[3, 7],[1, 2],[8, 11],[5, -12],[20, 25], [-3, 30], [2,2], [17, 17]])\n",
-    "    #data=sio.loadmat('../extras/example_data/weights.mat')\n",
-    "    #test_data=data['weights'][0][1]\n",
-    "    #test_data2=data['weights'][0][2]\n",
-    "\n",
-    "    array=np.zeros(data[0].shape)\n",
-    "    smoothed=[array]*len(data)\n",
-    "    print data.shape\n",
-    "    print array.shape\n",
-    "    print len(smoothed)\n",
-    "    \n",
-    "    for idx, x in enumerate(data):\n",
-    "        rows=data[idx].shape[0]\n",
+    "    if is_list(data):\n",
+    "        array=np.zeros(data[0].shape)\n",
+    "        smoothed=[array]*len(data)\n",
     "        \n",
-    "        smoothed[idx]=np.zeros((rows*10,3))\n",
-    "        smoothed[idx]=PCA.reduc(x, 3)\n",
-    "        smoothed[idx]= interp(smoothed[idx])\n",
-    "        \n",
-    "        \n",
-    "    print smoothed\n",
+    "        for idx, x in enumerate(data):\n",
+    "            rows=data[idx].shape[0]\n",
     "\n",
+    "            smoothed[idx]=np.zeros((rows*10,3))\n",
+    "            smoothed[idx]=PCA.reduc(x, 3)\n",
+    "            smoothed[idx]= interp(smoothed[idx])\n",
+    "            \n",
+    "    else:\n",
+    "        array=np.zeros(data.shape)\n",
+    "        rows=data.shape[0]\n",
+    "        smoothed=PCA.reduc(data,3)\n",
+    "        smoothed=interp(smoothed)\n",
+    "\n",
+    "        print smoothed\n",
+    "\n",
+    "      \n",
+    "        \n",
     "    def animate2(i):\n",
     "        ax1.clear()\n",
     "        #ax2.clear()\n",
@@ -83,16 +85,25 @@
     "        #ax2.set_color_cycle(['black'])\n",
     "\n",
     "        for x in smoothed:\n",
-    "            if i<=15:\n",
+    "            if i<=15:  \n",
     "                ax1.set_color_cycle(['red','red','red'])\n",
     "                ax1.view_init(elev=10., azim=i)\n",
     "                ax1.plot(x[0:i, 0], x[0:i, 1], x[0:i, 2])\n",
+    "            \n",
+    "                ax1.grid(False)\n",
+    "                ax1.set_xticklabels([])\n",
+    "                ax1.set_yticklabels([])\n",
+    "                ax1.set_zticklabels([])\n",
     "                \n",
     "            if i>15 and i<18:\n",
     "                ax1.set_color_cycle(['red','red','red'])\n",
     "                ax1.view_init(elev=10., azim=i)\n",
     "                ax1.plot(x[i-15:i, 0], x[i-15:i, 1], x[i-15:i, 2])\n",
     "                \n",
+    "                ax1.grid(False)\n",
+    "                ax1.set_xticklabels([])\n",
+    "                ax1.set_yticklabels([])\n",
+    "                ax1.set_zticklabels([])\n",
     "        \n",
     "            if i>=18 and i<58:\n",
     "                ax1.set_color_cycle(['red', 'red','grey','purple','purple','grey','orange','orange','grey'])\n",
@@ -100,6 +111,11 @@
     "                ax1.plot(x[i-15:i, 0], x[i-15:i, 1], x[i-15:i, 2])\n",
     "                ax1.plot(x[i-18:i-15,0],x[i-18:i-15,1],x[i-18:i-15,2], \":\")\n",
     "                ax1.plot(x[0:i-18,0],x[0:i-18,1],x[0:i-18,2], \":\")\n",
+    "                \n",
+    "                ax1.grid(False)\n",
+    "                ax1.set_xticklabels([])\n",
+    "                ax1.set_yticklabels([])\n",
+    "                ax1.set_zticklabels([])\n",
     "                \n",
     "            if i>=58:\n",
     "                if i<360:\n",
@@ -111,12 +127,28 @@
     "                ax1.plot(x[i-15:i, 0], x[i-15:i, 1], x[i-15:i, 2])\n",
     "                ax1.plot(x[i-18:i-15,0],x[i-18:i-15,1],x[i-18:i-15,2], \":\")\n",
     "                ax1.plot(x[i-58:i-18,0],x[i-58:i-18,1],x[i-58:i-18,2], \":\")\n",
+    "                \n",
+    "                ax1.grid(False)\n",
+    "                ax1.set_xticklabels([])\n",
+    "                ax1.set_yticklabels([])\n",
+    "                ax1.set_zticklabels([])\n",
     "\n",
-    "            #ax1.plot(x[0:i, 0], x[0:i, 1], x[0:i, 2])\n",
-    "            #ax1.plot(test_interp2[0:i, 0], test_interp2[0:i, 1], test_interp2[0:i, 2])\n",
+    "                \n",
+    "    #a = np.zeros((smoothed[0].shape[1],len(smoothed)))\n",
+    "    \n",
+    "    #for idx,s in smoothed:\n",
+    "        #for n in range(0,s.shape[1]):\n",
+    "            #a[idx,0]=max(s[:,0])\n",
+    "            #a[idx,1]=max(s[:,1])\n",
+    "            #a[idx,2]=max(s[:,2])\n",
+    "            \n",
+    "            \n",
     "\n",
     "    fig1 = plt.figure()\n",
     "    ax1 = fig1.add_subplot(111, projection='3d')\n",
+    "    ax1.axes.get_xaxis().set_visible(False)\n",
+    "    ax1.set_xticklabels([])\n",
+    "    plt.axis('off')\n",
     "    #ax1.auto_scale_xyz(100,100,100)\n",
     "\n",
     "    #for ii in xrange(0,360,1):\n",
@@ -124,7 +156,7 @@
     "        #savefig(\"movie%d.png\" % ii)\n",
     "    \n",
     "    anim=animation.FuncAnimation(fig1, animate2, interval=8, repeat=True)#frames=range(1, len(test_interp)), \n",
-    "    \n",
+    "\n",
     "    plt.show()\n",
     "\n"
    ]
@@ -140,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 54,
    "metadata": {
     "collapsed": true
    },
@@ -157,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
@@ -166,34 +198,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3, 300, 100)\n",
       "(300, 100)\n",
-      "3\n",
-      "[array([[ 0.10050115, -1.04455161,  0.85417628],\n",
-      "       [ 0.0313256 , -0.99388536,  0.75765008],\n",
-      "       [-0.03641043, -0.94479701,  0.6584764 ],\n",
-      "       ..., \n",
-      "       [ 0.4648183 , -1.86661315,  0.14186334],\n",
-      "       [ 0.52017292, -1.80499301,  0.23800672],\n",
-      "       [ 0.56840778, -1.74231555,  0.33748331]]), array([[-1.52102113,  1.16178977,  0.14757149],\n",
-      "       [-1.51974422,  0.97659203,  0.08756235],\n",
-      "       [-1.5159966 ,  0.79749417,  0.03039599],\n",
-      "       ..., \n",
-      "       [ 0.53830224,  2.8415647 , -0.30889719],\n",
-      "       [ 0.54265944,  2.74696888, -0.27717175],\n",
-      "       [ 0.54825418,  2.64804443, -0.24147998]]), array([[ 0.33853072,  1.53091919, -1.02017844],\n",
-      "       [ 0.26826388,  1.49379616, -0.84516075],\n",
-      "       [ 0.20543651,  1.45662142, -0.67578088],\n",
-      "       ..., \n",
-      "       [ 0.37641968,  1.50196503, -0.50832079],\n",
-      "       [ 0.40040457,  1.49345544, -0.47035713],\n",
-      "       [ 0.42951448,  1.48725409, -0.42664971]])]\n"
+      "3\n"
      ]
     }
    ],
    "source": [
+    "print test_data.shape\n",
+    "print len(sample)\n",
+    "\n",
+    "\n",
     "animator(sample)\n",
-    "#plt.show()"
+    "#plt.show()\n",
+    "\n"
    ]
   },
   {
@@ -203,16 +220,62 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def is_list(x):\n",
+    "    if type(x[0][0])==np.ndarray:\n",
+    "        return True\n",
+    "    elif type(x[0][0])==np.int64 or type(x[0][0])==np.float32:\n",
+    "        return False\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print is_list(sample)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print is_list(test_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "animator(hyp.hyperalign(sample))\n"
+   ]
   },
   {
    "cell_type": "code",
