--- a/python/notebooks/animate_2.ipynb
+++ b/python/notebooks/animate_2.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -27,10 +27,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.animation.FuncAnimation at 0x1228339d0>"
+       "<matplotlib.animation.FuncAnimation at 0x123199310>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,10 +83,14 @@
     "    #ax2.set_color_cycle(['black'])\n",
     "    \n",
     "    if i<=15:\n",
+    "        ax1.axes.get_xaxis().set_visible(False)\n",
+    "        ax1.axes.get_yaxis().set_visible(False)\n",
     "        ax1.plot(test_interp[0:i, 0], test_interp[0:i, 1], test_interp[0:i, 2])\n",
     "        ax1.plot(test_interp2[0:i, 0], test_interp2[0:i, 1], test_interp2[0:i, 2])\n",
     "        \n",
     "    if i>15:\n",
+    "        ax1.axes.get_xaxis().set_visible(False)\n",
+    "        ax1.axes.get_yaxis().set_visible(False)\n",
     "        ax1.plot(test_interp[i-15:i, 0], test_interp[i-15:i, 1], test_interp[i-15:i, 2])\n",
     "        ax1.plot(test_interp[i-18:i-15,0],test_interp[i-18:i-15,1],test_interp[i-18:i-15,2], \":\")\n",
     "        ax1.plot(test_interp[0:i-18,0],test_interp[0:i-18,1],test_interp[0:i-18,2], \":\")\n",
@@ -112,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
