traj_plot minor edits

--- a/python/notebooks/animate.ipynb
+++ b/python/notebooks/animate.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 74,
    "metadata": {
     "collapsed": false
    },
@@ -57,13 +57,10 @@
     "        return q(xx)\n",
     "    \n",
     "    if is_list(data):\n",
-    "        array=np.zeros(data[0].shape)\n",
+    "        array=np.zeros((data[0].shape[0]*10, 3))\n",
     "        smoothed=[array]*len(data)\n",
     "        \n",
     "        for idx, x in enumerate(data):\n",
-    "            rows=data[idx].shape[0]\n",
-    "\n",
-    "            smoothed[idx]=np.zeros((rows*10,3))\n",
     "            smoothed[idx]=PCA.reduc(x, 3)\n",
     "            smoothed[idx]= interp(smoothed[idx])\n",
     "            \n",
@@ -85,26 +82,18 @@
     "        #ax2.set_color_cycle(['black'])\n",
     "\n",
     "        for x in smoothed:\n",
+    "\n",
+    "\n",
     "            if i<=15:  \n",
     "                ax1.set_color_cycle(['red','red','red'])\n",
     "                ax1.view_init(elev=10., azim=i)\n",
-    "                ax1.plot(x[0:i, 0], x[0:i, 1], x[0:i, 2])\n",
-    "            \n",
-    "                ax1.grid(False)\n",
-    "                ax1.set_xticklabels([])\n",
-    "                ax1.set_yticklabels([])\n",
-    "                ax1.set_zticklabels([])\n",
+    "                ax1.plot(x[0:i, 0], x[0:i, 1], x[0:i, 2])        \n",
     "                \n",
     "            if i>15 and i<18:\n",
     "                ax1.set_color_cycle(['red','red','red'])\n",
     "                ax1.view_init(elev=10., azim=i)\n",
     "                ax1.plot(x[i-15:i, 0], x[i-15:i, 1], x[i-15:i, 2])\n",
-    "                \n",
-    "                ax1.grid(False)\n",
-    "                ax1.set_xticklabels([])\n",
-    "                ax1.set_yticklabels([])\n",
-    "                ax1.set_zticklabels([])\n",
-    "        \n",
+    "\n",
     "            if i>=18 and i<58:\n",
     "                ax1.set_color_cycle(['red', 'red','grey','purple','purple','grey','orange','orange','grey'])\n",
     "                ax1.view_init(elev=10., azim=i)\n",
@@ -112,10 +101,7 @@
     "                ax1.plot(x[i-18:i-15,0],x[i-18:i-15,1],x[i-18:i-15,2], \":\")\n",
     "                ax1.plot(x[0:i-18,0],x[0:i-18,1],x[0:i-18,2], \":\")\n",
     "                \n",
-    "                ax1.grid(False)\n",
-    "                ax1.set_xticklabels([])\n",
-    "                ax1.set_yticklabels([])\n",
-    "                ax1.set_zticklabels([])\n",
+    "\n",
     "                \n",
     "            if i>=58:\n",
     "                if i<360:\n",
@@ -127,11 +113,7 @@
     "                ax1.plot(x[i-15:i, 0], x[i-15:i, 1], x[i-15:i, 2])\n",
     "                ax1.plot(x[i-18:i-15,0],x[i-18:i-15,1],x[i-18:i-15,2], \":\")\n",
     "                ax1.plot(x[i-58:i-18,0],x[i-58:i-18,1],x[i-58:i-18,2], \":\")\n",
-    "                \n",
-    "                ax1.grid(False)\n",
-    "                ax1.set_xticklabels([])\n",
-    "                ax1.set_yticklabels([])\n",
-    "                ax1.set_zticklabels([])\n",
+    " \n",
     "\n",
     "                \n",
     "    #a = np.zeros((smoothed[0].shape[1],len(smoothed)))\n",
@@ -141,14 +123,19 @@
     "            #a[idx,0]=max(s[:,0])\n",
     "            #a[idx,1]=max(s[:,1])\n",
     "            #a[idx,2]=max(s[:,2])\n",
-    "            \n",
-    "            \n",
     "\n",
     "    fig1 = plt.figure()\n",
     "    ax1 = fig1.add_subplot(111, projection='3d')\n",
     "    ax1.axes.get_xaxis().set_visible(False)\n",
     "    ax1.set_xticklabels([])\n",
     "    plt.axis('off')\n",
+    "                \n",
+    "         \n",
+    "    ax1.grid(False)\n",
+    "    ax1.set_xticklabels([])\n",
+    "    ax1.set_yticklabels([])\n",
+    "    ax1.set_zticklabels([])    \n",
+    "\n",
     "    #ax1.auto_scale_xyz(100,100,100)\n",
     "\n",
     "    #for ii in xrange(0,360,1):\n",
@@ -172,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 75,
    "metadata": {
     "collapsed": true
    },
@@ -189,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 76,
    "metadata": {
     "collapsed": false
    },
