notes on code updates

--- a/python/notebooks/animate.ipynb
+++ b/python/notebooks/animate.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -30,7 +30,7 @@
    "source": [
     "import sys\n",
     "sys.path.append('../')\n",
-    "#import scipy.io as sio\n",
+    "import scipy.io as sio\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt \n",
     "import matplotlib.animation as animation\n",
@@ -133,7 +133,9 @@
     "                ax1.set_yticklabels([])\n",
     "                ax1.set_zticklabels([])\n",
     "\n",
-    "                \n",
+    "     \n",
+    "        average=(sum(x[i-15:i,0]/14),sum(x[i-15:i,1]/14),sum(x[i-15:i,2]/14))\n",
+    "    \n",
     "    #a = np.zeros((smoothed[0].shape[1],len(smoothed)))\n",
     "    \n",
     "    #for idx,s in smoothed:\n",
@@ -172,9 +174,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -189,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
